feat: parse elements by parse and recursive flatten