@@ -1,23 +1,30 @@
 package com.eronalves1996.tokens;
 
-import com.eronalves1996.util.Either;
-
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class JSXChildren extends JSXToken {
     private List<JSXToken> subTokens;
 
-    public JSXChildren(String child){
-        super();
+    {
         subTokens = new ArrayList<>();
+    }
+
+    public JSXChildren(String child) {
+        super();
         parse(child);
     }
 
-    private void parse(String child){
+    public JSXChildren() {
+    }
+
+    public void addToken(JSXToken token) {
+        subTokens.add(token);
+    }
+
+    private void parse(String child) {
         String[] split = child.split(">");
-        if(split.length > 1){
+        if (split.length > 1) {
             Stream<List<JSXToken>> listStream = Arrays.stream(split).map(token -> {
                 if (token.startsWith("<")) {
                     String substring = token.substring(1);
@@ -36,13 +43,63 @@ public class JSXChildren extends JSXToken {
 
                 return List.of(new JSXText(token));
             });
-            List<JSXToken> collect = listStream.flatMap(item -> item.stream()).filter(Objects::nonNull).collect(Collectors.toList());
+            List<JSXToken> collect = listStream.flatMap(Collection::stream).filter(Objects::nonNull).toList();
+            List<JSXToken> flatten = flatten(collect);
+            System.out.println(flatten);
+        } else subTokens.add(new JSXText(child));
+    }
+
+    private List<JSXToken> flatten(List<JSXToken> unflattenedTokens){
+
+        Iterator<JSXToken> tokenIterator = unflattenedTokens.iterator();
+        List<JSXToken> flattenedList = new ArrayList<>();
+        String identifierName = "";
+
+        while(tokenIterator.hasNext()){
+            JSXToken nextToken = tokenIterator.next();
+            if(List.of(JSXOpeningElement.class, JSXClosingElement.class, JSXSelfClosingElement.class).contains(nextToken.getClass())){
+                flattenedList.add(nextToken);
+                if(nextToken.getClass() == JSXOpeningElement.class){
+                    identifierName = ((JSXOpeningElement) nextToken).getIdentifier();
+                }
+            }
+            else {
+                JSXChildren children = new JSXChildren();
+                flattenedList.add(children);
+                children.addToken(nextToken);
+                JSXToken closingTag = flatten(tokenIterator, children, identifierName);
+                flattenedList.add(closingTag);
+            }
         }
-        else subTokens.add(new JSXText(child));
+        return flattenedList;
+    }
+
+    private JSXToken flatten(Iterator<JSXToken> tokenIterator, JSXChildren children, String referenceIdentifier){
+
+        while(tokenIterator.hasNext()){
+            JSXToken nextToken = tokenIterator.next();
+            if(JSXOpeningElement.class == nextToken.getClass()){
+                children.addToken(nextToken);
+                String newReferenceIdentifier = ((JSXOpeningElement) nextToken).getIdentifier();
+                JSXChildren subChildren = new JSXChildren();
+                children.addToken(subChildren);
+                JSXToken closingTag = flatten(tokenIterator, subChildren, newReferenceIdentifier);
+                children.addToken(closingTag);
+            }
+            else if(nextToken.getClass() == JSXClosingElement.class){
+                String identifier = ((JSXClosingElement) nextToken).getIdentifier();
+                if(identifier.equals(referenceIdentifier)) return nextToken;
+            }
+            else {
+                children.addToken(nextToken);
+            }
+        }
+
+        return null;
     }
 
     @Override
-    public List<JSXToken> subTokens(){
+    public List<JSXToken> subTokens() {
         return Collections.unmodifiableList(subTokens);
     }
 
@@ -52,4 +109,6 @@ public class JSXChildren extends JSXToken {
                 "subTokens=" + subTokens +
                 '}';
     }
+
+
 }
